[fix] overflow in css

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -46,6 +46,11 @@ button:hover {
     margin-top: 0;
     font-weight: 400;
     font-size: 14px;
+    width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow-x: hidden;
+    height: 17px;
 }
 
 .locations {
@@ -57,6 +62,7 @@ button:hover {
 .amenities {
     height: 100%;
     width: 25%;
+    white-space: nowrap;
 }
 
 .popover {
